# lezac-rust

./: .gitignore  Cargo.toml  GAME_SPEC.md  README.md  TODO.md
.cargo/: config.toml
.github/workflows/: wasm-pages.yml
ghidra/: FUN_1000_2361.txt  FUN_1000_26e8.txt  FUN_1000_2adc.txt  FUN_1000_370e.txt  FUN_1000_45fa.txt  FUN_1000_5102.txt  FUN_1000_6053.txt  data_and_strings.txt  decompiled.c
src/: assets.rs  game.rs  input.rs  level.rs  main.rs  monsters.rs  original_rng.rs  player.rs  renderer.rs  sound.rs  touch.rs
web/: gl-polyfill.js  index.html  quad-storage.js
