[package]
name = "larax-zaco"
version = "0.1.0"
edition = "2021"
description = "Rust port of Larax & Zaco (1996) by Zanobi Software"
authors = ["Port by exe.dev"]

[dependencies]
macroquad = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Storage", "Window"] }

[profile.release]
opt-level = 2
lto = true
